Update two pointer